@@ -11,5 +11,5 @@ Arne Schirmacher      <arne@schirmacher.de>
 Thom van Os           <thom@vanos.com>
 Andreas Wacker        <andreas100@methodstudios.com>
 Artur Zaprzala        <zybi@users.sourceforge.net>
-Dan Dennedy	      <dan@dennedy.org>
+Dan Dennedy	          <dan@dennedy.org>
 
